client/src/styles/Hamburger.scss
.sidebar {
    height: 100vh;
    width: 16em;
    left: -16em;
    background-color:$yellow;;
    position: fixed;
    top: 1em;
    z-index: 4000;
    transition: all 0.4s;
    overflow: scroll;
    text-align: center; 
    text-transform: uppercase;
    font-family: 'Noto Sans', sans-serif;

    a {
        text-decoration: none;
        width: 100%;
        margin-bottom: 2em;
        background-color: $green;
        padding: .4em 1em;
        box-shadow: 4px 4px 10px $shadow;
        color: #000;
        transition: all 0.4s;
        border-radius: 2px;
    } 
    
    a:hover {
        background-color: $orange;
    }

    li {
        list-style:none;
        margin-left: -9px;
        cursor: pointer;
        width: 100%;
        padding: .6em .7em;
        transition: all 0.3s;
    }
    li:hover {
        color: $white;
        background-color: $orange;
    }
    .materials {
        border-bottom: 4px solid #79cfca;
        padding: 10px;
        .materials-title {
            border-bottom: 2px solid #79cfca;
            padding: 5px;
        }
    }
    .locations {
        border-bottom: 4px solid #61c900;
        padding: 10px;
        .locations-title{
            margin-top: 1em;
            border-bottom: 4px solid #61c900;
            padding: 5px;
        }
    }
}

.xMark {
    cursor: pointer;
    margin-left: 85%;
    font-size: 16pt;
}

.open {
    font-size: 10pt;
    transform: translateX(16em);
    transition: all 0.5s;
}

